﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-01-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/transformations.lib.php: remove some PHP3 compatibility code

2005-12-31 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1388167, deleting a row in a table 
      without a primary key, handle correctly is_js_confirmed

2005-12-30 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: bug #1388135, IE and dropping databases
    * librairies/mult_submits.inc.php: strong warning for DROP DATABASE
    * tbl_printview.php: bug #1389165, Print view shows all columns as Null Yes 
      (MySQL 5.x)
    * libraries/Config.class.php: patch #1392181, typo,
      thanks to Luis Mirabal - normannormal

2005-12-27 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, libraries/check_user_privileges.lib.php: 
      - reenable a non-privileged user to change his password
      - display the Reload MySQL link only if user has proper rights
    * Documentation.html: bug #1389582, unclosed code tag,
      thanks to Isaac Bennetch

2005-12-25 Michal Čihař  <michal@cihar.com>
    * libraries/import.lib.php, libraries/import/sql.php: Handle correctly
      dumps with commented out commands (eg. from mysqldump).

2005-12-22 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, libraries/common.lib.php: bug #1381856,
      Cannot edit a table having 40 columns
    * libraries/common.lib.php: bug #1388116, cannot pass TRUE by reference 
      to PMA_setCookie, thanks to Isaac Bennetch
    * libraries/tbl_replace_fields.inc.php: recent fix introduced a bug:
      cannot change a value for a nullable field

2005-12-21 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat
    * lang/hungarian update, thanks to Mihály Mészáros <necronix@freemail.hu>
    * tbl_properties_operations.php, libraries/tbl_properties.inc.php: